@@ -1,6 +1,8 @@
 package kr.co.wikibook.greengram.config.model;
 
+import kr.co.wikibook.greengram.config.enumcode.model.EnumUserRole;
 import lombok.Getter;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -9,26 +11,24 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 
+@Slf4j
 @Getter
 public class UserPrincipal implements UserDetails {
-    private final long memberId;
+    private final long signedUserId;
     private final Collection<? extends GrantedAuthority> authorities;
 
-    public UserPrincipal(long memberId, List<String> roles) {
-        this.memberId = memberId;
+    public UserPrincipal(long signedUserId, List<EnumUserRole> roles) {
+        this.signedUserId = signedUserId;
         List<SimpleGrantedAuthority> list = new ArrayList<>();
-        for(String role : roles){
-            list.add(new SimpleGrantedAuthority(role));
+        for(EnumUserRole role : roles){
+            String roleName = String.format("ROLE_%s", role.name());
+            log.info("roleName: {}", roleName);
+            list.add(new SimpleGrantedAuthority(roleName));
         }
         this.authorities = list;
 
-        //this.authorities = roles.stream().map(role -> new SimpleGrantedAuthority(role)).collect(Collectors.toList());
+        //this.authorities = roles.stream().map(role -> new SimpleGrantedAuthority(String.format("ROLE_%s", role.name()))).toList();
     }
-
-//    @Override
-//    public Collection<? extends GrantedAuthority> getAuthorities() {
-//        return List.of();
-//    }
 
     @Override
     public String getPassword() { return null; }
